eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/HPPOfferLetterExpiry__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>C0075</description>
    <fields>
        <fullName>CaseCategory__c</fullName>
        <description>C0075</description>
        <label>CaseCategory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseDescription__c</fullName>
        <description>C0075</description>
        <label>CaseDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <description>C0075</description>
        <label>CaseOrigin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CasePriority__c</fullName>
        <description>C0075</description>
        <label>CasePriority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseQueue__c</fullName>
        <description>C0075</description>
        <label>CaseQueue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <description>C0075</description>
        <label>CaseRecordType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSubject__c</fullName>
        <description>C0075</description>
        <label>CaseSubject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpiryNumberOfDays__c</fullName>
        <description>C0075</description>
        <label>ExpiryNumberOfDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PerformExpiry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>C0075</description>
        <label>PerformExpiry</label>
        <type>Checkbox</type>
    </fields>
    <label>HPP Offer Letter Expiry</label>
</CustomObject>